--- a/poster_2016/poster_landscape.tex
+++ b/poster_2016/poster_landscape.tex
@@ -233,7 +233,12 @@ The previous pipe line used a camera and image detection to create the primitive
 
 \begin{multicols}{2}
 	
-	\textbf{Pilot Study}: We launched OASIS to a small number of willing participants. There are a number of optional questions that we hoped the participants would answer. The participants were asked to navigate the site and create a few models. We created a short video to help participants navigate around the system. Some of the participants reported tiny bugs through our bug submission form. Almost all the bugs have since been reviewed and patched. Additionally the feedback from participants both experienced and inexperienced in daylighting monitoring have provided useful in setting goals for future improvements.
+	\textbf{Pilot User Study}:In addition to the creation of OASIS, we also conducted a pilot user study. 
+	We hypothesize that if OASIS is publicized to users online, then anonymous online users will construct models in our sketching interface and create daylight renderings for analysis.
+	Also, we speculate that the number of models anonymous online users will construct on OASIS will be quantitatively larger and from a broader range of users than previous user studies conducted on the Virtual Heliodon.
+	Collecting both active and passive feedback from users will help us better understand where improvements to OASIS can be made and how users currently experience OASIS.
+	Lastly, in order to collect as much feedback as possible we plan on advertising OASIS on social media outlets, online bulletin boards, and on campus.
+	To summarize, we anticipate  that this pilot user study will provide us valuable feedback to improve OASIS.
 	
 
 	 \begin{center}\includegraphics[height=6em]{img/videoqr.jpg}	
