Updated title and names

--- a/poster_2016/poster_landscape.tex
+++ b/poster_2016/poster_landscape.tex
@@ -144,9 +144,9 @@
   % Eye Catcher
   {\includegraphics[height=5em]{img/lgpsealm.eps}}
   % 
-  {\bf\textsc{Web Interface for daylighting design and feedback }\vspace{0.5em}}
+  {\bf\textsc{The Online Architectural Sketching Interface for Simulations }\vspace{0.5em}}
   % Authors
-  {\textsc{\{ Max Espinoza, Rebecca Nordhauser, Joshua Nasman, and Barbara Cutler \}}}
+  {\textsc{\{ Max Espinoza, Eric Zhang, Sensen Chen, Jeramey Tyler, and Barbara Cutler \}}}
   % University logo
   {% The makebox allows the  to flow into the logo, this is a hack because of the L shaped logo.
     \includegraphics[height=5.0em]{img/logo_cs_design_1.png}
@@ -173,14 +173,13 @@
 
 
   %Images for this section
-  %{\includegraphics[height=10em]{img/office_color.jpg}}
-  {\includegraphics[height=10.25em]{img/oasis_1.png}}
+  {\includegraphics[height=9.5em]{img/ian_matt_contraption_frame.jpg}}
+  {\includegraphics[height=9.5em]{img/ian_matt_pointing.jpg}}
 
-  {\includegraphics[height=13em]{img/aag_figure_3.png}}
+  {\includegraphics[height=14em]{img/aag_figure_3.png}}
 
-
-  {\includegraphics[height=10.25em]{img/oasis_2.png}} 
-  %{\includegraphics[height=11.25em]{img/oasis_2.png}}
+  {\includegraphics[height=10.5em]{img/museum_false_color2.jpg}} 
+  {\includegraphics[height=10.5em]{img/office_color.jpg}}
 
   %text for this section
 Previous research on the development of a spatially augmented tangible user interface for architectural daylighting simulation and design offered architects a novel approach in collaborative room design. \cite{NasmanEvaluation, ShengYYC09 }
